--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ a {
 li {
   list-style: none;
 }
+.subtitle {
+  text-align: center;
+  font-size: 18px;
+  margin: 18px 0;
+}
 .main_header {
   display: flex;
   justify-content: space-between;
@@ -16,6 +21,7 @@ li {
   width: 100%;
   background-color: white;
   padding: 8px;
+  z-index: 9;
 }
 .main_header a {
   color: black;
@@ -70,4 +76,25 @@ li {
   position: absolute;
   left: 0;
   bottom: 0;
+}
+.about_company {
+  padding: 128px 16px;
+}
+.about_company .about_head > h3 {
+  text-align: center;
+  font-size: 24px;
+  margin: 18px 0;
+}
+.about_company .about_icons {
+  margin-top: 64px;
+  width: 24.99999%;
+  float: left;
+  text-align: center;
+}
+.about_company .about_icons > i {
+  font-size: 64px;
+}
+.about_company .about_icons > p:last-child {
+  font-size: 15px;
+  margin: 15px 0;
 }
