--- a/css/style.less
+++ b/css/style.less
@@ -12,6 +12,11 @@ li {
     list-style: none;
 }
 
+
+
+section {
+    padding: 128px 16px;
+}
 .subtitle {
     text-align: center;
     font-size: 18px;
@@ -97,7 +102,7 @@ li {
 }
 
 .about_company {
-    padding: 128px 16px;
+
 
     .about_head {
 
@@ -124,6 +129,47 @@ li {
             margin: 15px 0;
         }
 
+    }
+
+}
+
+.about_work{
+
+    color: black;
+    background-color: #f1f1f1;
+    padding: 128px 16px;
+    display: flex;
+
+    div {
+        width: 49.9999%;
+        padding: 0 8px;
+    }
+
+    img {
+        border-radius: 8px;
+        max-width: 100%;
+        height: auto;
+    }
+
+    h3 {
+        margin: 10px 0;
+    }
+
+    p {
+        margin: 15px 0;
+        font-size: 15px;
+        font-weight: 400px;
+    }
+
+    a {
+        color:white;
+        background-color: black;
+        padding: 8px 16px;
+        display: inline-block;
+        &:hover {
+            color:black;
+            background-color: #575757;
+        }
     }
 
 }
